--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://tvwiki20.com">
+    <title>My Web App</title>
+
+    <!-- Manifest 링크 추가 -->
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- 서비스 워커 등록 (오프라인 기능 등) -->
     <script>
-        window.location.replace("https://tvwiki20.com"); 
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+                console.log('Service Worker registered with scope: ', registration.scope);
+            }).catch(function(error) {
+                console.log('Service Worker registration failed: ', error);
+            });
+        }
     </script>
 </head>
+<body>
+    <h1>Welcome to My Web App</h1>
+    <p>This page will now work as a PWA (Progressive Web App)!</p>
+
+    <!-- 페이지 리디렉션 대신 표시될 내용 추가 -->
+    <script>
+        // 여전히 리디렉션을 원하면 페이지가 로드된 후 리디렉션하도록 설정
+        setTimeout(function() {
+            window.location.replace("https://tvwiki20.com");
+        }, 3000);  // 3초 후 리디렉션
+    </script>
+</body>
 </html>
