--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://tvwiki20.com">
-    <script>
-        window.location.replace("https://tvwiki20.com"); 
-    </script>
+    <title>Loading...</title>
 </head>
+<body>
+    <h1>Loading the page...</h1>
+    
+    <!-- iframe을 사용하여 tvwiki20.com을 로드 -->
+    <iframe src="https://tvwiki20.com" width="100%" height="100%" style="border: none;"></iframe>
+    
+</body>
 </html>
