--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
+    <style>
+        /* 브라우저 화면을 꽉 채우기 위한 CSS */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Loading the page...</h1>
-    
-    <!-- iframe을 사용하여 tvwiki20.com을 로드 -->
-    <iframe src="https://tvwiki20.com" width="100%" height="100%" style="border: none;"></iframe>
-    
+    <!-- iframe을 사용하여 페이지를 꽉 채워서 로드 -->
+    <iframe src="https://tvwiki20.com"></iframe>
 </body>
 </html>
