--- a/youtube.html
+++ b/youtube.html
@@ -35,7 +35,7 @@
 
   <script>
     function goToSite() {
-      window.location.href = "https://m.youtube.com";
+      window.location.href = "https://music.youtube.com";
     }
   </script>
 </body>
