--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading...</title>
-    <style>
-        /* 브라우저 화면을 꽉 채우기 위한 CSS */
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://tvwiki20.com">
+    <script>
+        window.location.replace("https://tvwiki20.com"); 
+    </script>
 </head>
-<body>
-    <!-- iframe을 사용하여 페이지를 꽉 채워서 로드 -->
-    <iframe src="https://tvwiki20.com"></iframe>
-</body>
 </html>
