--- a/tvflixios.html
+++ b/tvflixios.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>내 웹앱</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <!-- iOS PWA 설정 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
@@ -26,6 +26,7 @@
   </style>
 </head>
 <body>
-  <iframe src="https://tvwiki20.com" allow="autoplay; fullscreen"></iframe>
+  <!-- ⚠️ 여기만 수정됨 -->
+  <iframe src="https://calm-hill-6120.crossgate.workers.dev/" allow="autoplay; fullscreen"></iframe>
 </body>
 </html>
