--- a/test.html
+++ b/test.html
@@ -11,6 +11,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="theme-color" content="#ffffff">
 
+  <!-- Netflix 아이콘 설정 -->
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg">
+
   <style>
     html, body {
       margin: 0;
@@ -26,7 +30,6 @@
   </style>
 </head>
 <body>
-  <!-- ⚠️ 여기만 수정됨 -->
   <iframe src="https://tvwiki20.com" allow="autoplay; fullscreen"></iframe>
 </body>
 </html>
