--- a/test.html
+++ b/test.html
@@ -8,8 +8,8 @@
   <!-- iOS PWA 설정 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#000000">
 
   <!-- Netflix 아이콘 설정 -->
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" type="image/svg+xml">
@@ -20,6 +20,9 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      background-color: #000000; /* 검은 배경 */
+      color: #ffffff;            /* 흰 텍스트 */
+      font-family: sans-serif;
     }
 
     iframe {
