--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>TvFlix</title>
+  <!-- <title>TvFlix</title> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- iOS PWA 설정 -->
