--- a/nateMail.html
+++ b/nateMail.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>내 웹앱</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta http-equiv="refresh" content="0; url=https://mail.nate.com">
+    <script>
+        window.location.replace("https://mail.nate.com"); 
+    </script>
   <!-- iOS PWA 설정 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
@@ -25,8 +28,6 @@
     }
   </style>
 </head>
-<body>
-  <!-- ⚠️ 여기만 수정됨 -->
-  <iframe src="https://mail.nate.com" allow="autoplay; fullscreen"></iframe>
-</body>
+
 </html>
+
