--- a/nateMail.html
+++ b/nateMail.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body>
-  <a href="https://tvwiki20.com">TvFlix 바로가기</a>
+  <a href="https://mail.nate.com">시작하기</a>
 </body>
 </html>
 
