--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://tvwiki21.com">
+    <meta http-equiv="refresh" content="0; url=https://tvwiki1.net/">
     <script>
-        window.location.replace("https://tvwiki21.com"); 
+        window.location.replace("https://tvwiki1.net/"); 
     </script>
 </head>
 </html>
+
