--- a/test.html
+++ b/test.html
@@ -33,6 +33,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://tvwiki22.com" allow="autoplay; fullscreen"></iframe>
+  <iframe src="https://tvwiki1.net/" allow="autoplay; fullscreen"></iframe>
 </body>
 </html>
