--- a/test.html
+++ b/test.html
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>TvFlix</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- iOS PWA 설정 -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#000000">
-
-  <!-- Netflix 아이콘 설정 -->
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg">
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background-color: #000000; /* 검은 배경 */
-      color: #ffffff;            /* 흰 텍스트 */
-      font-family: sans-serif;
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://tvwiki1.net/">
+    <script>
+        window.location.replace("https://tvwiki1.net/"); 
+    </script>
 </head>
-<body>
-  <iframe src="https://tvwiki1.net/" allow="autoplay; fullscreen"></iframe>
-</body>
 </html>
